// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`js_config > basic 1`] = `
"--------------------
arguments: --check test.ts
working directory: js_config/fixtures/basic
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`js_config > error: default export is not an object 1`] = `
"--------------------
arguments: --check test.ts
working directory: js_config/fixtures/error_not_object
exit code: 1
--- STDOUT ---------

--- STDERR ---------
Failed to load configuration file.
<cwd>/oxfmt.config.ts
Error: Configuration file must have a default export that is an object.
Ensure the file has a valid default export of a JSON-serializable configuration object.
--------------------"
`;

exports[`js_config > error: no default export 1`] = `
"--------------------
arguments: --check test.ts
working directory: js_config/fixtures/error_no_default
exit code: 1
--- STDOUT ---------

--- STDERR ---------
Failed to load configuration file.
<cwd>/oxfmt.config.ts
Error: Configuration file has no default export.
Ensure the file has a valid default export of a JSON-serializable configuration object.
--------------------"
`;

exports[`js_config > priority: JSON config takes precedence over JS config 1`] = `
"--------------------
arguments: --check test.ts
working directory: js_config/fixtures/priority
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
